--- a/src/MachineDashboard/Views/MainWindow.axaml
+++ b/src/MachineDashboard/Views/MainWindow.axaml
@@ -17,7 +17,7 @@
     </Design.DataContext>
 	
 	<Grid
-       ColumnDefinitions="Auto,*"
+       ColumnDefinitions="Auto,*,*"
        RowDefinitions="Auto,*"
 	   >
 
@@ -86,8 +86,34 @@
 				</StackPanel>
 			</WrapPanel>
 
+			<WrapPanel HorizontalAlignment="Stretch" Grid.Column="2" Grid.Row="1">
+				<StackPanel Orientation="Horizontal">
+					<StackPanel Orientation="Vertical">
+						
+						<TextBlock Text="History" />
+						<ScrollViewer
+							Grid.Row="1"
+							Margin="30"
+							Grid.Column="0">
+							<!-- <ItemsControl Items="{Binding Machines}">
+								<ItemsControl.ItemTemplate>
+									<DataTemplate>
+									<TextBlock Text="History" />
+			
+											<StackPanel Orientation="Horizontal">
+												<TextBlock Text="Datetime" />
+												<TextBlock Text="Action" />
+												<TextBlock Text="Before" />
+												<TextBlock Text="After" />
+											</StackPanel>
+									
+									</DataTemplate>
+								</ItemsControl.ItemTemplate>
+							</ItemsControl> -->
+						</ScrollViewer>
+					</StackPanel>
+				</StackPanel>
+			</WrapPanel>
 
-
-		
 	</Grid>
 </Window>
